--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://anetta999.github.io/team-project-group-3-JS",
+  "homepage": "https://GoitStudentsWorks.github.io/85_js_anetta999",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project-group-3-JS/"
+    "build": "parcel build src/*.html --public-url /85_js_anetta999/"
   },
   "repository": {
     "type": "git",
